assets/css/main.css
/*
* @Author: Sebastian B. Mohr
* @Date:   2020-10-15 13:30:35
* @Last Modified by:   Sebastian Mohr
* @Last Modified time: 2021-11-05 20:55:27
*/

body {
	font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
	font-size: 12px;
}


h5{
	font-weight: bold;
	font-size: 12px;
	margin-left: 3px;
	margin-right: 3px;
	margin-bottom: 3px;
	margin-top: 3px;
	padding:0;
    color: #7762b5;
}

input {
    margin-right: 2px;
}

#chartdiv {
	height: 100vh;
}
#inputs{
	position: fixed;
	display: grid;
	top: 10px;
	left: 10px;
	padding: 5px;
	background-color: rgba(0,0,0,0.1);
	border-radius: 5px;
}

.color-box {
    width: 15px;
    height: 15px;
    display: inline-block;
    background-color: #ccc;
}

#legend{
	position: fixed;
	display: grid;
	bottom: 10px;
	left: 10px;
	padding: 5px;
	background-color: rgba(0,0,0,0.1);
	border-radius: 5px;
}

table {
 border-collapse: collapse;
}
td:first-child, th:first-child {
 border-left: none;
}
tr:last-child {
 border-bottom: none;
}

.data_tooltip {
    color: #212529;
    position: absolute;
    background-color: white;
    border: solid;
    border-width: 1px;
    border-radius: 5px;
    padding: 10px;
    pointer-events: none;
    background-color: rgba(200,200,200,0.8);
    font-size: 10px;
}

.data_tooltip h5{
    color: #212529;
}

/*--------------------------------------------------------------
# Accordion
--------------------------------------------------------------*/

 /* Style the buttons that are used to open and close the accordion panel */
.accordion {
  color: #6f7180;
  cursor: pointer;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  display: flex;
  justify-content: space-between;
}

.accordion.active{
  color: #7762b5;
}
.accordion>i::before{
  content: "\f067";
  position: relative;
}
.accordion>i:before {
position: relative;
top: 50%;
    transform: translateY(-50%);
    display: block;
}

.accordion.active>i::before{
  content: "\f068";
}

/* Style the accordion panel. Note: hidden by default */
.panel {
  display: block;
  overflow: hidden;
}


ul {
	padding: 0px;
	margin: 0px;
}

ul > li
{
    list-style-type: none;
}

#loader {
    border: 12px solid #f3f3f3;
    border-radius: 50%;
    border-top: 12px solid #444444;
    width: 70px;
    height: 70px;
    animation: spin 1s linear infinite;
}
  
@keyframes spin {
    100% {
        transform: rotate(360deg);
    }
}
  
.center {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

#legend_subtitle{
    font-size: 9px; color: #666; font-weight: normal;
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: #1c1c1c;
        color: gray;
    }

    .highcharts-background{
        background-color: #1c1c1c;
        fill: #1c1c1c;
    }

    .highcharts-plot-background {
        fill: #1c1c1c;
    }
    .highcharts-plot-border {
        stroke: #1c1c1c;
    }
    .highcharts-legend-item {
        color: gray !important;
        fill:  gray !important;
    }
    .legend_title{
        fill: white;
    }
    .legend_subtitle{
        fill: gray;
        color:  gray;
    }

}

.grid-container {
  display: grid;
  grid-template-columns: min-content min-content;
  grid-gap: 0px 10px;
  padding: 10px;
}
#color-bar-texts{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
    padding: 1.5px;
}
#color-bar-texts div{
    text-align: right;
    white-space:nowrap;
}

